--- a/marvel/marvel.html
+++ b/marvel/marvel.html
@@ -156,7 +156,7 @@
     <footer
       class="bg-violet-950 min-h-24 w-full text-center py-5 px-10 text-white flex flex-col sm:py-5 sm:flex-col md:flex-row justify-between items-center"
     >
-      <p class="text-lg">© 2025 Hero★Verse</p>
+      <p class="text-lg">© 2025 Hero★Verse. All rights reserved.</p>
       <p class="text-lg pt-4 md:pt-0">
         Not affiliated with Marvel or DC. All characters belong to their
         respective owners.
