--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hero★Verse - Where Legends Begin</title>
+    <title>Hero★Verse | Home</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,7 +17,7 @@
     <navbar
       class="bg-violet-950 h-24 w-full flex justify-between items-center px-10"
     >
-      <h2 class="text-white text-5xl flex">
+      <h2 class="text-white text-5xl flex cursor-default">
         Hero<span class="items-center flex px-0.5"
           ><img
             src="assets/star.png"
@@ -29,7 +29,7 @@
       </h2>
 
       <!-- Hamburger Icon (mobile only) -->
-      <button class="hamburger flex flex-col gap-y-2 md:hidden z-50">
+      <button class="hamburger flex flex-col gap-y-2 cursor-pointer md:hidden z-50">
         <span class="bg-white h-1 w-8 rounded-md"></span>
         <span class="bg-white h-1 w-8 rounded-md"></span>
         <span class="bg-white h-1 w-8 rounded-md"></span>
@@ -51,9 +51,9 @@
     <main
       class="bg-black w-full flex-col flex items-center justify-center gap-y-5"
     >
-      <h3 class="text-white text-3xl pt-20">Welcome to</h3>
+      <h3 class="text-white text-3xl pt-20 cursor-default">Welcome to</h3>
       <span class="bg-white h-1 w-7 rounded-3xl"></span>
-      <h2 class="text-white text-8xl flex justify-center items-center">
+      <h2 class="text-white text-8xl flex justify-center items-center cursor-default">
         Hero<span class="items-center flex justify-center"
           ><img
             src="assets/star.png"
@@ -64,10 +64,10 @@
         >Verse
       </h2>
       <span class="bg-white h-1 w-7 rounded-3xl"></span>
-      <p class="text-white text-3xl">Where Legends Begin</p>
+      <p class="text-white text-3xl cursor-default">Where Legends Begin</p>
 
       <div class="pt-10">
-        <p class="text-white text-2xl text-center">Choose Your Universe</p>
+        <p class="text-white text-2xl text-center cursor-default">Choose Your Universe</p>
         <div class="flex justify-between items-center gap-x-8 pt-5 pb-20">
           <a href="marvel/marvel.html"
             ><img
@@ -87,7 +87,7 @@
     </main>
 
     <section class="flex flex-col justify-center items-center w-full">
-      <h2 class="text-black text-6xl flex pt-20">
+      <h2 class="text-black text-6xl flex pt-20 cursor-default">
         Hero<span class="items-center flex px-0.5"
           ><img
             src="assets/star.png"
@@ -98,14 +98,14 @@
         >Verse
       </h2>
 
-      <p class="text-2xl text-center pt-5">
+      <p class="text-2xl text-center pt-5 cursor-default">
         is a fan-made space to explore the legends, origins, and powers of your
         favorite superheroes.
       </p>
 
       <div class="flex justify-center items-center gap-x-2 pt-2">
         <span class="bg-black h-1 w-7 rounded-3xl"></span>
-        <p class="text-3xl text-center py-6">Popular Legends</p>
+        <p class="text-3xl text-center py-6 cursor-default">Popular Legends</p>
         <span class="bg-black h-1 w-7 rounded-3xl"></span>
       </div>
 
@@ -120,7 +120,7 @@
             alt="spiderman"
             class="h-60 w-full border-b-2 border-black object-cover"
           />
-          <p class="text-white text-3xl pt-4">Spider-Man</p>
+          <p class="text-white text-3xl pt-4 cursor-default">Spider-Man</p>
           <a href="marvel/marvel.html">
             <img
               src="assets/marvel/marvel.png"
@@ -143,7 +143,7 @@
             alt="batman"
             class="h-60 w-full border-b-2 border-black object-cover"
           />
-          <p class="text-white text-3xl pt-4">Batman</p>
+          <p class="text-white text-3xl pt-4 cursor-default">Batman</p>
           <a href="dc/dc.html">
             <img src="assets/dc/dc.png" alt="dc logo" class="text-white h-10" />
           </a>
@@ -162,7 +162,7 @@
             alt="superman"
             class="h-60 w-full border-b-2 border-black object-cover"
           />
-          <p class="text-white text-3xl pt-4">Superman</p>
+          <p class="text-white text-3xl pt-4 cursor-default">Superman</p>
           <a href="dc/dc.html">
             <img src="assets/dc/dc.png" alt="dc logo" class="text-white h-10" />
           </a>
@@ -178,8 +178,8 @@
     <footer
       class="bg-violet-950 min-h-24 w-full text-center py-5 px-10 text-white flex flex-col sm:py-5 sm:flex-col md:flex-row justify-between items-center"
     >
-      <p class="text-lg">© 2025 Hero★Verse. All rights reserved.</p>
-      <p class="text-lg pt-4 md:pt-0">
+      <p class="text-lg cursor-default">© 2025 Hero★Verse. All rights reserved.</p>
+      <p class="text-lg pt-4 cursor-default md:pt-0">
         Not affiliated with Marvel or DC. All characters belong to their
         respective owners.
       </p>
