--- a/dc/batman.html
+++ b/dc/batman.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HeroVerse - Where Legends Begin</title>
+    <title>Hero★Verse | Batman</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,7 +17,7 @@
     <navbar
       class="bg-violet-950 h-24 w-full flex justify-between items-center px-10"
     >
-      <h2 class="text-white text-5xl flex">
+      <h2 class="text-white text-5xl flex cursor-default">
         Hero<span class="items-center flex px-0.5"
           ><img
             src="/assets/star.png"
@@ -29,7 +29,7 @@
       </h2>
 
       <!-- Hamburger Icon (mobile only) -->
-      <button class="hamburger flex flex-col gap-y-2 md:hidden z-50">
+      <button class="hamburger flex flex-col gap-y-2 cursor-pointer md:hidden z-50">
         <span class="bg-white h-1 w-8 rounded-md"></span>
         <span class="bg-white h-1 w-8 rounded-md"></span>
         <span class="bg-white h-1 w-8 rounded-md"></span>
@@ -60,19 +60,19 @@
           </div>
           <div class="text-center sm:text-left sm:ml-15">
             <div class="text-center">
-              <h1 class="text-white text-5xl mb-2 mt-10 sm:mt-0">Batman</h1>
-              <h2 class="text-white text-3xl mb-4">Real Name: Bruce Wayne</h2>
-              <h4 class="text-white text-xl mb-4">
+              <h1 class="text-white text-5xl mb-2 mt-10 cursor-default sm:mt-0">Batman</h1>
+              <h2 class="text-white text-3xl mb-4 cursor-default">Real Name: Bruce Wayne</h2>
+              <h4 class="text-white text-xl mb-4 cursor-default">
                 Created by: Bob Kane and Bill Finger
               </h4>
-              <h4 class="text-white text-xl mb-4">
+              <h4 class="text-white text-xl mb-4 cursor-default">
                 First Appearance: Detective Comics #27 (1939)
               </h4>
             </div>
 
             <div class="bg-black rounded-2xl mt-5 mb-5 p-4">
-              <h3 class="text-2xl text-white text-center underline">Origin</h3>
-              <p class="text-white text-lg mb-4 text-center">
+              <h3 class="text-2xl text-white text-center cursor-default underline">Origin</h3>
+              <p class="text-white text-lg mb-4 text-center cursor-default">
                 After witnessing the tragic murder of his parents,<br />
                 Bruce Wayne dedicated his life to fighting crime.<br />
                 With intense training, intelligence, and vast resources,<br />
@@ -81,17 +81,17 @@
             </div>
 
             <div class="text-center bg-violet-950 rounded-2xl p-4">
-              <h3 class="text-white text-2xl underline">Powers & Abilities</h3>
+              <h3 class="text-white text-2xl cursor-default underline">Powers & Abilities</h3>
               <ul class="list-none">
-                <li class="text-white text-xl">🧠 Genius-Level Intellect</li>
-                <li class="text-white text-xl">🥋 Master Martial Artist</li>
-                <li class="text-white text-xl">🕶️ Expert Detective</li>
-                <li class="text-white text-xl">🛡️ Peak Human Conditioning</li>
-                <li class="text-white text-xl">🦇 Stealth and Fear Tactics</li>
-                <li class="text-white text-xl">
+                <li class="text-white text-xl cursor-default">🧠 Genius-Level Intellect</li>
+                <li class="text-white text-xl cursor-default">🥋 Master Martial Artist</li>
+                <li class="text-white text-xl cursor-default">🕶️ Expert Detective</li>
+                <li class="text-white text-xl cursor-default">🛡️ Peak Human Conditioning</li>
+                <li class="text-white text-xl cursor-default">🦇 Stealth and Fear Tactics</li>
+                <li class="text-white text-xl cursor-default">
                   💼 Advanced Technology & Gadgets
                 </li>
-                <li class="text-white text-xl">
+                <li class="text-white text-xl cursor-default">
                   🚗 High-Tech Vehicles (Batmobile, Batwing)
                 </li>
               </ul>
@@ -119,8 +119,8 @@
     <footer
       class="bg-violet-950 min-h-24 w-full text-center py-5 px-10 text-white flex flex-col sm:py-5 sm:flex-col md:flex-row justify-between items-center"
     >
-      <p class="text-lg">© 2025 Hero★Verse. All rights reserved.</p>
-      <p class="text-lg pt-4 md:pt-0">
+      <p class="text-lg cursor-default">© 2025 Hero★Verse. All rights reserved.</p>
+      <p class="text-lg pt-4 cursor-default md:pt-0">
         Not affiliated with Marvel or DC. All characters belong to their
         respective owners.
       </p>
