--- a/dc/dc.html
+++ b/dc/dc.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HeroVerse - Where Legends Begin</title>
+    <title>Hero★Verse | DC</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,7 +17,7 @@
     <navbar
       class="bg-violet-950 h-24 w-full flex justify-between items-center px-10"
     >
-      <h2 class="text-white text-5xl flex">
+      <h2 class="text-white text-5xl flex cursor-default">
         Hero<span class="items-center flex px-0.5"
           ><img
             src="/assets/star.png"
@@ -29,7 +29,7 @@
       </h2>
 
       <!-- Hamburger Icon (mobile only) -->
-      <button class="hamburger flex flex-col gap-y-2 md:hidden z-50">
+      <button class="hamburger flex flex-col gap-y-2 cursor-pointer md:hidden z-50">
         <span class="bg-white h-1 w-8 rounded-md"></span>
         <span class="bg-white h-1 w-8 rounded-md"></span>
         <span class="bg-white h-1 w-8 rounded-md"></span>
@@ -59,7 +59,7 @@
             class="max-h-30 sm:max-h-32"
           />
           <hr class="bg-white w-10 h-1 rounded-md my-4" />
-          <p class="text-white text-md text-center mb-6 sm:text-lg md:text-xl">
+          <p class="text-white text-md text-center mb-6 cursor-default sm:text-lg md:text-xl">
             The DC Universe, first introduced in 1938 with Superman,<br />
             is a legendary realm of iconic heroes, dark villains, and mythic
             battles.<br />
@@ -83,7 +83,7 @@
             alt="superman"
             class="h-60 sm:h-70 w-full border-b-2 border-black object-cover"
           />
-          <p class="text-white text-3xl pt-4">Superman</p>
+          <p class="text-white text-3xl pt-4 cursor-default">Superman</p>
           <button
             class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-900 cursor-pointer"
           >
@@ -100,7 +100,7 @@
             alt="batman"
             class="h-60 sm:h-70 w-full border-b-2 border-black object-cover"
           />
-          <p class="text-white text-3xl pt-4">Batman</p>
+          <p class="text-white text-3xl pt-4 cursor-default">Batman</p>
           <button
             class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-900 cursor-pointer"
           >
@@ -116,7 +116,7 @@
             alt="wonderwoman"
             class="h-60 sm:h-70 w-full border-b-2 border-black object-cover"
           />
-          <p class="text-white text-3xl pt-4">Wonder Woman</p>
+          <p class="text-white text-3xl pt-4 cursor-default">Wonder Woman</p>
           <button
             class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-900 cursor-pointer"
           >
@@ -132,7 +132,7 @@
             alt="greenlantern"
             class="h-60 sm:h-70 w-full border-b-2 border-black object-cover"
           />
-          <p class="text-white text-3xl pt-4">Green Lantern</p>
+          <p class="text-white text-3xl pt-4 cursor-default">Green Lantern</p>
           <button
             class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-900 cursor-pointer"
           >
@@ -155,8 +155,8 @@
     <footer
       class="bg-violet-950 min-h-24 w-full text-center py-5 px-10 text-white flex flex-col sm:py-5 sm:flex-col md:flex-row justify-between items-center"
     >
-      <p class="text-lg">© 2025 Hero★Verse. All rights reserved.</p>
-      <p class="text-lg pt-4 md:pt-0">
+      <p class="text-lg cursor-default">© 2025 Hero★Verse. All rights reserved.</p>
+      <p class="text-lg pt-4 cursor-default md:pt-0">
         Not affiliated with Marvel or DC. All characters belong to their
         respective owners.
       </p>
