--- a/dc/greenlantern.html
+++ b/dc/greenlantern.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HeroVerse - Where Legends Begin</title>
+    <title>Hero★Verse | Green Lantern</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,7 +17,7 @@
     <navbar
       class="bg-violet-950 h-24 w-full flex justify-between items-center px-10"
     >
-      <h2 class="text-white text-5xl flex">
+      <h2 class="text-white text-5xl flex cursor-default">
         Hero<span class="items-center flex px-0.5"
           ><img
             src="/assets/star.png"
@@ -29,7 +29,7 @@
       </h2>
 
       <!-- Hamburger Icon (mobile only) -->
-      <button class="hamburger flex flex-col gap-y-2 md:hidden z-50">
+      <button class="hamburger flex flex-col gap-y-2 cursor-pointer md:hidden z-50">
         <span class="bg-white h-1 w-8 rounded-md"></span>
         <span class="bg-white h-1 w-8 rounded-md"></span>
         <span class="bg-white h-1 w-8 rounded-md"></span>
@@ -60,21 +60,21 @@
           </div>
           <div class="text-center sm:text-left sm:ml-15">
             <div class="text-center">
-              <h1 class="text-white text-5xl mb-2 mt-10 sm:mt-0">
+              <h1 class="text-white text-5xl mb-2 mt-10 cursor-default sm:mt-0">
                 Green Lantern
               </h1>
-              <h2 class="text-white text-3xl mb-4">Real Name: John Stewart</h2>
-              <h4 class="text-white text-xl mb-4">
+              <h2 class="text-white text-3xl mb-4 cursor-default">Real Name: John Stewart</h2>
+              <h4 class="text-white text-xl mb-4 cursor-default">
                 Created by: Dennis O'Neil and Neal Adams
               </h4>
-              <h4 class="text-white text-xl mb-4">
+              <h4 class="text-white text-xl mb-4 cursor-default">
                 First Appearance: Green Lantern #87 (1971)
               </h4>
             </div>
 
             <div class="bg-black rounded-2xl mt-5 mb-5 p-4">
-              <h3 class="text-2xl text-white text-center underline">Origin</h3>
-              <p class="text-white text-lg mb-4 text-center">
+              <h3 class="text-2xl text-white text-center cursor-default underline">Origin</h3>
+              <p class="text-white text-lg mb-4 text-center cursor-default">
                 A former Marine and skilled architect, John Stewart<br />
                 was selected by the Guardians to join the Green Lantern
                 Corps.<br />
@@ -85,23 +85,23 @@
             </div>
 
             <div class="text-center bg-violet-950 rounded-2xl p-4">
-              <h3 class="text-white text-2xl underline">Powers & Abilities</h3>
+              <h3 class="text-white text-2xl cursor-default underline">Powers & Abilities</h3>
               <ul class="list-none">
-                <li class="text-white text-xl">
+                <li class="text-white text-xl cursor-default">
                   💍 Power Ring Constructs (limited only by imagination)
                 </li>
-                <li class="text-white text-xl">✈️ Flight (via ring)</li>
-                <li class="text-white text-xl">
+                <li class="text-white text-xl cursor-default">✈️ Flight (via ring)</li>
+                <li class="text-white text-xl cursor-default">
                   🛡️ Energy Shields & Force Fields
                 </li>
-                <li class="text-white text-xl">
+                <li class="text-white text-xl cursor-default">
                   🧠 Tactical & Strategic Genius
                 </li>
-                <li class="text-white text-xl">🥋 Military Combat Training</li>
-                <li class="text-white text-xl">
+                <li class="text-white text-xl cursor-default">🥋 Military Combat Training</li>
+                <li class="text-white text-xl cursor-default">
                   📐 Architectural Precision in Constructs
                 </li>
-                <li class="text-white text-xl">🌌 Interstellar Travel</li>
+                <li class="text-white text-xl cursor-default">🌌 Interstellar Travel</li>
               </ul>
             </div>
           </div>
@@ -127,8 +127,8 @@
     <footer
       class="bg-violet-950 min-h-24 w-full text-center py-5 px-10 text-white flex flex-col sm:py-5 sm:flex-col md:flex-row justify-between items-center"
     >
-      <p class="text-lg">© 2025 Hero★Verse. All rights reserved.</p>
-      <p class="text-lg pt-4 md:pt-0">
+      <p class="text-lg cursor-default">© 2025 Hero★Verse. All rights reserved.</p>
+      <p class="text-lg pt-4 cursor-default md:pt-0">
         Not affiliated with Marvel or DC. All characters belong to their
         respective owners.
       </p>
