--- a/heroes.html
+++ b/heroes.html
@@ -17,7 +17,7 @@
     <navbar
       class="bg-violet-950 h-24 w-full flex justify-between items-center px-10"
     >
-      <h2 class="text-white text-5xl flex">
+      <h2 class="text-white text-5xl flex cursor-default">
         Hero<span class="items-center flex px-0.5"
           ><img
             src="assets/star.png"
@@ -29,7 +29,7 @@
       </h2>
 
       <!-- Hamburger Icon (mobile only) -->
-      <button class="hamburger flex flex-col gap-y-2 md:hidden z-50">
+      <button class="hamburger flex flex-col gap-y-2 cursor-pointer md:hidden z-50">
         <span class="bg-white h-1 w-8 rounded-md"></span>
         <span class="bg-white h-1 w-8 rounded-md"></span>
         <span class="bg-white h-1 w-8 rounded-md"></span>
@@ -49,7 +49,7 @@
     </navbar>
 
     <main class="flex flex-col justify-center items-center w-full">
-      <h2 class="text-black text-6xl flex pt-20">
+      <h2 class="text-black text-6xl flex pt-20 cursor-default">
         Hero<span class="items-center flex px-0.5"
           ><img
             src="assets/star.png"
@@ -102,7 +102,7 @@
             alt="batman"
             class="h-60 w-full sm:h-60 border-b-2 border-black object-cover"
           />
-          <p class="text-white text-3xl pt-4">Batman</p>
+          <p class="text-white text-3xl pt-4 cursor-default">Batman</p>
           <a href="dc/dc.html">
             <img src="assets/dc/dc.png" alt="dc logo" class="text-white h-10" />
           </a>
@@ -123,7 +123,7 @@
             alt="daredevil"
             class="h-60 w-full border-b-2 border-black object-cover"
           />
-          <p class="text-white text-3xl pt-4">Daredevil</p>
+          <p class="text-white text-3xl pt-4 cursor-default">Daredevil</p>
           <a href="marvel/marvel.html">
             <img
               src="assets/marvel/marvel.png"
@@ -148,7 +148,7 @@
             alt="greenlantern"
             class="h-60 w-full border-b-2 border-black object-cover"
           />
-          <p class="text-white text-3xl pt-4 sm:text-center">Green Lantern</p>
+          <p class="text-white text-3xl pt-4 cursor-default sm:text-center">Green Lantern</p>
           <a href="dc/dc.html">
             <img src="assets/dc/dc.png" alt="dc logo" class="text-white h-10" />
           </a>
@@ -169,7 +169,7 @@
             alt="hulk"
             class="h-60 w-full border-b-2 border-black object-cover"
           />
-          <p class="text-white text-3xl pt-4">Hulk</p>
+          <p class="text-white text-3xl pt-4 cursor-default">Hulk</p>
           <a href="marvel/marvel.html">
             <img
               src="assets/marvel/marvel.png"
@@ -194,7 +194,7 @@
             alt="spiderman"
             class="h-60 w-full border-b-2 border-black object-cover"
           />
-          <p class="text-white text-3xl pt-4 sm:text-center">Spider-Man</p>
+          <p class="text-white text-3xl pt-4 cursor-default sm:text-center">Spider-Man</p>
           <a href="marvel/marvel.html">
             <img
               src="assets/marvel/marvel.png"
@@ -219,7 +219,7 @@
             alt="superman"
             class="h-60 w-full border-b-2 border-black object-cover"
           />
-          <p class="text-white text-3xl pt-4">Superman</p>
+          <p class="text-white text-3xl pt-4 cursor-default">Superman</p>
           <a href="dc/dc.html">
             <img src="assets/dc/dc.png" alt="dc logo" class="text-white h-10" />
           </a>
@@ -240,7 +240,7 @@
             alt="wolverine"
             class="h-60 w-full border-b-2 border-black object-cover"
           />
-          <p class="text-white text-3xl pt-4">Wolverine</p>
+          <p class="text-white text-3xl pt-4 cursor-default">Wolverine</p>
           <a href="marvel/marvel.html">
             <img
               src="assets/marvel/marvel.png"
@@ -265,7 +265,7 @@
             alt="wonderwoman"
             class="h-60 w-full border-b-2 border-black object-cover"
           />
-          <p class="text-white text-3xl pt-4 sm:text-center">Wonder Woman</p>
+          <p class="text-white text-3xl pt-4 cursor-default sm:text-center">Wonder Woman</p>
           <a href="dc/dc.html">
             <img src="assets/dc/dc.png" alt="dc logo" class="text-white h-10" />
           </a>
@@ -281,8 +281,8 @@
     <footer
       class="bg-violet-950 min-h-24 w-full text-center py-5 px-10 text-white flex flex-col sm:py-5 sm:flex-col md:flex-row justify-between items-center"
     >
-      <p class="text-lg">© 2025 Hero★Verse. All rights reserved.</p>
-      <p class="text-lg pt-4 md:pt-0">
+      <p class="text-lg cursor-default">© 2025 Hero★Verse. All rights reserved.</p>
+      <p class="text-lg pt-4 cursor-default md:pt-0">
         Not affiliated with Marvel or DC. All characters belong to their
         respective owners.
       </p>
