--- a/marvel/marvel.html
+++ b/marvel/marvel.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HeroVerse - Where Legends Begin</title>
+    <title>Hero★Verse | Marvel</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,7 +17,7 @@
     <navbar
       class="bg-violet-950 h-24 w-full flex justify-between items-center px-10"
     >
-      <h2 class="text-white text-5xl flex">
+      <h2 class="text-white text-5xl flex cursor-default">
         Hero<span class="items-center flex px-0.5"
           ><img
             src="/assets/star.png"
@@ -29,7 +29,7 @@
       </h2>
 
       <!-- Hamburger Icon (mobile only) -->
-      <button class="hamburger flex flex-col gap-y-2 md:hidden z-50">
+      <button class="hamburger flex flex-col gap-y-2 cursor-pointer md:hidden z-50">
         <span class="bg-white h-1 w-8 rounded-md"></span>
         <span class="bg-white h-1 w-8 rounded-md"></span>
         <span class="bg-white h-1 w-8 rounded-md"></span>
@@ -59,7 +59,7 @@
             class="max-h-30 sm:max-h-32"
           />
           <hr class="bg-white w-10 h-1 rounded-md mb-4" />
-          <p class="text-white text-md text-center mb-6 sm:text-lg md:text-xl">
+          <p class="text-white text-md text-center mb-6 cursor-default sm:text-lg md:text-xl">
             The Marvel Universe, created in 1961 by Stan Lee and Jack Kirby,
             <br />is a vast world of heroes, villains, and cosmic forces. <br />
             It spans Earth and beyond, exploring epic tales of heroism,
@@ -82,7 +82,7 @@
             alt="spiderman"
             class="h-60 sm:h-70 w-full border-b-2 border-black object-cover"
           />
-          <p class="text-white text-3xl pt-4">Spider-Man</p>
+          <p class="text-white text-3xl pt-4 cursor-default">Spider-Man</p>
           <button
             class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-black border-2 hover:bg-violet-900 cursor-pointer"
           >
@@ -99,7 +99,7 @@
             alt="daredevil"
             class="h-60 sm:h-70 w-full border-b-2 border-black object-cover"
           />
-          <p class="text-white text-3xl pt-4">Daredevil</p>
+          <p class="text-white text-3xl pt-4 cursor-default">Daredevil</p>
           <button
             class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-black border-2 hover:bg-violet-900 cursor-pointer"
           >
@@ -116,7 +116,7 @@
             alt="wolverine"
             class="h-60 sm:h-70 w-full border-b-2 border-black object-cover"
           />
-          <p class="text-white text-3xl pt-4">Wolverine</p>
+          <p class="text-white text-3xl pt-4 cursor-default">Wolverine</p>
           <button
             class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-black border-2 hover:bg-violet-900 cursor-pointer"
           >
@@ -133,7 +133,7 @@
             alt="hulk"
             class="h-60 sm:h-70 w-full border-b-2 border-black object-cover"
           />
-          <p class="text-white text-3xl pt-4">Hulk</p>
+          <p class="text-white text-3xl pt-4 cursor-default">Hulk</p>
           <button
             class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-black border-2 hover:bg-violet-900 cursor-pointer"
           >
@@ -156,8 +156,8 @@
     <footer
       class="bg-violet-950 min-h-24 w-full text-center py-5 px-10 text-white flex flex-col sm:py-5 sm:flex-col md:flex-row justify-between items-center"
     >
-      <p class="text-lg">© 2025 Hero★Verse. All rights reserved.</p>
-      <p class="text-lg pt-4 md:pt-0">
+      <p class="text-lg cursor-default">© 2025 Hero★Verse. All rights reserved.</p>
+      <p class="text-lg pt-4 cursor-default md:pt-0">
         Not affiliated with Marvel or DC. All characters belong to their
         respective owners.
       </p>
