--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
       </h2>
 
       <!-- Hamburger Icon (mobile only) -->
-      <button class="hamburger flex flex-col gap-y-2 cursor-pointer md:hidden z-50">
+      <button
+        class="hamburger flex flex-col gap-y-2 cursor-pointer md:hidden z-50"
+      >
         <span class="bg-white h-1 w-8 rounded-md"></span>
         <span class="bg-white h-1 w-8 rounded-md"></span>
         <span class="bg-white h-1 w-8 rounded-md"></span>
@@ -53,7 +55,9 @@
     >
       <h3 class="text-white text-3xl pt-20 cursor-default">Welcome to</h3>
       <span class="bg-white h-1 w-7 rounded-3xl"></span>
-      <h2 class="text-white text-8xl flex justify-center items-center cursor-default">
+      <h2
+        class="text-white text-8xl flex justify-center items-center cursor-default"
+      >
         Hero<span class="items-center flex justify-center"
           ><img
             src="assets/star.png"
@@ -67,7 +71,9 @@
       <p class="text-white text-3xl cursor-default">Where Legends Begin</p>
 
       <div class="pt-10">
-        <p class="text-white text-2xl text-center cursor-default">Choose Your Universe</p>
+        <p class="text-white text-2xl text-center cursor-default">
+          Choose Your Universe
+        </p>
         <div class="flex justify-between items-center gap-x-8 pt-5 pb-20">
           <a href="marvel/marvel.html"
             ><img
@@ -176,10 +182,12 @@
     </section>
 
     <footer
-      class="bg-violet-950 min-h-24 w-full text-center py-5 px-10 text-white flex flex-col sm:py-5 sm:flex-col md:flex-row justify-between items-center"
+      class="bg-violet-950 min-h-24 w-full text-center py-5 px-10 text-white flex flex-col sm:py-5 lg:flex-row justify-between items-center"
     >
-      <p class="text-lg cursor-default">© 2025 Hero★Verse. All rights reserved.</p>
-      <p class="text-lg pt-4 cursor-default md:pt-0">
+      <p class="text-lg cursor-default">
+        © 2025 Hero★Verse. All rights reserved.
+      </p>
+      <p class="text-lg pt-2 cursor-default md:pt-2">
         Not affiliated with Marvel or DC. All characters belong to their
         respective owners.
       </p>
