--- a/marvel/daredevil.html
+++ b/marvel/daredevil.html
@@ -115,10 +115,12 @@
     </main>
 
     <footer
-      class="bg-violet-950 min-h-24 w-full text-center py-5 px-10 text-white flex flex-col sm:py-5 sm:flex-col md:flex-row justify-between items-center"
+      class="bg-violet-950 min-h-24 w-full text-center py-5 px-10 text-white flex flex-col sm:py-5 lg:flex-row justify-between items-center"
     >
-      <p class="text-lg cursor-default">© 2025 Hero★Verse. All rights reserved.</p>
-      <p class="text-lg pt-4 cursor-default md:pt-0">
+      <p class="text-lg cursor-default">
+        © 2025 Hero★Verse. All rights reserved.
+      </p>
+      <p class="text-lg pt-2 cursor-default md:pt-2">
         Not affiliated with Marvel or DC. All characters belong to their
         respective owners.
       </p>
