--- a/heroes.html
+++ b/heroes.html
@@ -144,7 +144,7 @@
           data-universe="dc"
         >
           <img
-            src="assets/dc/greenlantern2.webp"
+            src="assets/dc/greenlantern.jpg"
             alt="greenlantern"
             class="h-60 w-full border-b-2 border-black object-cover"
           />
@@ -165,7 +165,7 @@
           data-universe="marvel"
         >
           <img
-            src="assets/marvel/hulk2.jpg"
+            src="assets/marvel/hulk.jpg"
             alt="hulk"
             class="h-60 w-full border-b-2 border-black object-cover"
           />
