--- a/heroes.html
+++ b/heroes.html
@@ -29,7 +29,9 @@
       </h2>
 
       <!-- Hamburger Icon (mobile only) -->
-      <button class="hamburger flex flex-col gap-y-2 cursor-pointer md:hidden z-50">
+      <button
+        class="hamburger flex flex-col gap-y-2 cursor-pointer md:hidden z-50"
+      >
         <span class="bg-white h-1 w-8 rounded-md"></span>
         <span class="bg-white h-1 w-8 rounded-md"></span>
         <span class="bg-white h-1 w-8 rounded-md"></span>
@@ -48,7 +50,7 @@
       </ul>
     </navbar>
 
-    <main class="flex flex-col justify-center items-center w-full">
+    <main class="flex flex-col justify-center items-center w-full min-h-full">
       <h2 class="text-black text-6xl flex pt-20 cursor-default">
         Hero<span class="items-center flex px-0.5"
           ><img
@@ -90,7 +92,7 @@
       </div>
 
       <div
-        class="grid grid-cols-1 pb-20 sm:grid-cols-2 md:grid-cols-4 gap-x-20 md:gap-x-20 sm:px-10 gap-y-10 mt-5"
+        class="grid grid-cols-1 pb-20 sm:grid-cols-2 md:grid-cols-4 gap-x-20 md:gap-x-10 lg:gap-x-20 sm:px-10 gap-y-10 mt-5"
       >
         <!-- Card 1: Batman -->
         <div
@@ -148,7 +150,9 @@
             alt="greenlantern"
             class="h-60 w-full border-b-2 border-black object-cover"
           />
-          <p class="text-white text-3xl pt-4 cursor-default sm:text-center">Green Lantern</p>
+          <p class="text-white text-3xl pt-4 cursor-default sm:text-center">
+            Green Lantern
+          </p>
           <a href="dc/dc.html">
             <img src="assets/dc/dc.png" alt="dc logo" class="text-white h-10" />
           </a>
@@ -194,7 +198,9 @@
             alt="spiderman"
             class="h-60 w-full border-b-2 border-black object-cover"
           />
-          <p class="text-white text-3xl pt-4 cursor-default sm:text-center">Spider-Man</p>
+          <p class="text-white text-3xl pt-4 cursor-default sm:text-center">
+            Spider-Man
+          </p>
           <a href="marvel/marvel.html">
             <img
               src="assets/marvel/marvel.png"
@@ -265,7 +271,9 @@
             alt="wonderwoman"
             class="h-60 w-full border-b-2 border-black object-cover"
           />
-          <p class="text-white text-3xl pt-4 cursor-default sm:text-center">Wonder Woman</p>
+          <p class="text-white text-3xl pt-4 cursor-default sm:text-center">
+            Wonder Woman
+          </p>
           <a href="dc/dc.html">
             <img src="assets/dc/dc.png" alt="dc logo" class="text-white h-10" />
           </a>
