--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
         >Verse
       </h2>
 
-      <p class="text-2xl text-center pt-5 cursor-default">
+      <p
+        class="text-2xl text-center pt-5 cursor-default line-clamp-none md:line-clamp-2 lg:line-clamp-none"
+      >
         is a fan-made space to explore the legends, origins, and powers of your
         favorite superheroes.
       </p>
