New style update

--- a/dc/batman.html
+++ b/dc/batman.html
@@ -58,7 +58,7 @@
               alt="batman"
             />
           </div>
-          <div class="text-center sm:text-left sm:ml-15">
+          <div class="text-center sm:text-left md:ml-5 lg:ml-15">
             <div class="text-center">
               <h1 class="text-white text-5xl mb-2 mt-10 cursor-default sm:mt-0">Batman</h1>
               <h2 class="text-white text-3xl mb-4 cursor-default">Real Name: Bruce Wayne</h2>
