--- a/marvel/spiderman.html
+++ b/marvel/spiderman.html
@@ -58,7 +58,7 @@
               alt="spiderman"
             />
           </div>
-          <div class="text-center sm:text-left sm:ml-15">
+          <div class="text-center sm:text-left md:ml-5 lg:ml-15">
             <div class="text-center">
               <h1 class="text-white text-5xl mb-2 mt-10 cursor-default sm:mt-0">Spider-Man</h1>
               <h2 class="text-white text-3xl mb-4 cursor-default">Real Name: Peter Parker</h2>
