--- a/marvel/wolverine.html
+++ b/marvel/wolverine.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hero★Verse | Wolverine</title>
+    <link rel="shortcut icon" href="assets/icon.png" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -44,7 +45,7 @@
       >
         <li><a href="../index.html">Home</a></li>
         <li class="hover:text-red-600">
-          <a href="../marvel/marvel.html">Marvel</a>
+          <a href="marvel.html">Marvel</a>
         </li>
         <li class="hover:text-blue-600"><a href="../dc/dc.html">DC</a></li>
         <li><a href="../heroes.html">All Heroes</a></li>
