--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hero★Verse | Home</title>
+    <link rel="shortcut icon" href="assets/icon.png" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -41,12 +42,12 @@
       <ul
         class="nav-list hidden flex-col absolute top-20 left-0 w-full bg-violet-950 text-white text-2xl p-6 pl-10 gap-4 z-40 sm:top-24 sm:pl-10 md:flex md:flex-row md:gap-6 md:items-center md:bg-transparent md:p-0 md:text-2xl md:static md:w-auto md:ml-auto"
       >
-        <li><a href="../index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li class="hover:text-red-600">
-          <a href="../marvel/marvel.html">Marvel</a>
+          <a href="marvel/marvel.html">Marvel</a>
         </li>
-        <li class="hover:text-blue-600"><a href="../dc/dc.html">DC</a></li>
-        <li><a href="../heroes.html">All Heroes</a></li>
+        <li class="hover:text-blue-600"><a href="dc/dc.html">DC</a></li>
+        <li><a href="heroes.html">All Heroes</a></li>
       </ul>
     </navbar>
 
