--- a/heroes.html
+++ b/heroes.html
@@ -59,7 +59,7 @@
             alt="star-icon"
             width="25px"
             height="25px"
-            class="invert" /></span
+            class="text-white invert" /></span
         >Verse
       </h2>
       <div>
@@ -103,7 +103,7 @@
           <img
             src="assets/dc/batman.webp"
             alt="batman"
-            class="h-60 w-full sm:h-60 border-b-2 border-black object-cover"
+            class="h-60 w-full sm:h-60 border-b-2 border-black object-cover text-white"
           />
           <p class="text-white text-3xl pt-4 cursor-default">Batman</p>
           <a href="dc/dc.html">
@@ -124,7 +124,7 @@
           <img
             src="assets/marvel/daredevil.webp"
             alt="daredevil"
-            class="h-60 w-full border-b-2 border-black object-cover"
+            class="h-60 w-full border-b-2 border-black object-cover text-white"
           />
           <p class="text-white text-3xl pt-4 cursor-default">Daredevil</p>
           <a href="marvel/marvel.html">
@@ -149,7 +149,7 @@
           <img
             src="assets/dc/greenlantern.jpg"
             alt="greenlantern"
-            class="h-60 w-full border-b-2 border-black object-cover"
+            class="h-60 w-full border-b-2 border-black object-cover text-white"
           />
           <p class="text-white text-3xl pt-4 cursor-default sm:text-center">
             Green Lantern
@@ -172,7 +172,7 @@
           <img
             src="assets/marvel/hulk.jpg"
             alt="hulk"
-            class="h-60 w-full border-b-2 border-black object-cover"
+            class="h-60 w-full border-b-2 border-black object-cover text-white"
           />
           <p class="text-white text-3xl pt-4 cursor-default">Hulk</p>
           <a href="marvel/marvel.html">
@@ -197,7 +197,7 @@
           <img
             src="assets/marvel/spiderman3.jpg"
             alt="spiderman"
-            class="h-60 w-full border-b-2 border-black object-cover"
+            class="h-60 w-full border-b-2 border-black object-cover text-white"
           />
           <p class="text-white text-3xl pt-4 cursor-default sm:text-center">
             Spider-Man
@@ -224,7 +224,7 @@
           <img
             src="assets/dc/superman.webp"
             alt="superman"
-            class="h-60 w-full border-b-2 border-black object-cover"
+            class="h-60 w-full border-b-2 border-black object-cover text-white"
           />
           <p class="text-white text-3xl pt-4 cursor-default">Superman</p>
           <a href="dc/dc.html">
@@ -245,7 +245,7 @@
           <img
             src="assets/marvel/wolverine.jpg"
             alt="wolverine"
-            class="h-60 w-full border-b-2 border-black object-cover"
+            class="h-60 w-full border-b-2 border-black object-cover text-white"
           />
           <p class="text-white text-3xl pt-4 cursor-default">Wolverine</p>
           <a href="marvel/marvel.html">
@@ -270,7 +270,7 @@
           <img
             src="assets/dc/wonderwoman.jpg"
             alt="wonderwoman"
-            class="h-60 w-full border-b-2 border-black object-cover"
+            class="h-60 w-full border-b-2 border-black object-cover text-white"
           />
           <p class="text-white text-3xl pt-4 cursor-default sm:text-center">
             Wonder Woman
