--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
             ><img
               src="assets/marvel/marvel.png"
               alt="marvel logo"
-              class="h-28 hover:relative -top-4"
+              class="h-28 hover:relative -top-4 text-white"
           /></a>
           <span class="bg-white h-7 w-1 rounded-3xl"></span>
           <a href="dc/dc.html"
             ><img
               src="assets/dc/dc.png"
               alt="dc logo"
-              class="h-28 hover:relative -top-4"
+              class="h-28 hover:relative -top-4 text-white"
           /></a>
         </div>
       </div>
@@ -101,7 +101,7 @@
             alt="star-icon"
             width="25px"
             height="25px"
-            class="invert" /></span
+            class="invert text-white" /></span
         >Verse
       </h2>
 
@@ -127,7 +127,7 @@
           <img
             src="assets/marvel/spiderman3.jpg"
             alt="spiderman"
-            class="h-60 w-full border-b-2 border-black object-cover"
+            class="h-60 w-full border-b-2 border-black object-cover text-white"
           />
           <p class="text-white text-3xl pt-4 cursor-default">Spider-Man</p>
           <a href="marvel/marvel.html">
@@ -150,7 +150,7 @@
           <img
             src="assets/dc/batman.webp"
             alt="batman"
-            class="h-60 w-full border-b-2 border-black object-cover"
+            class="h-60 w-full border-b-2 border-black object-cover text-white"
           />
           <p class="text-white text-3xl pt-4 cursor-default">Batman</p>
           <a href="dc/dc.html">
@@ -169,7 +169,7 @@
           <img
             src="assets/dc/superman.webp"
             alt="superman"
-            class="h-60 w-full border-b-2 border-black object-cover"
+            class="h-60 w-full border-b-2 border-black object-cover text-white"
           />
           <p class="text-white text-3xl pt-4 cursor-default">Superman</p>
           <a href="dc/dc.html">
