--- a/marvel/marvel.html
+++ b/marvel/marvel.html
@@ -21,7 +21,7 @@
       <h2 class="text-white text-5xl flex cursor-default">
         Hero<span class="items-center flex px-0.5"
           ><img
-            src="/assets/star.png"
+            src="../assets/star.png"
             alt="star-icon"
             width="20px"
             height="20px"
@@ -55,9 +55,9 @@
           class="inset-0 bg-black/80 w-full flex flex-col justify-center items-center py-10"
         >
           <img
-            src="/assets/marvel/marvel.png"
+            src="../assets/marvel/marvel.png"
             alt="marvel logo"
-            class="max-h-30 sm:max-h-32"
+            class="max-h-30 sm:max-h-32 text-white"
           />
           <hr class="bg-white w-10 h-1 rounded-md mb-4" />
           <p class="text-white text-md text-center mb-6 cursor-default sm:text-lg md:text-xl">
@@ -81,7 +81,7 @@
           <img
             src="/assets/marvel/spiderman.png"
             alt="spiderman"
-            class="h-60 sm:h-70 w-full border-b-2 border-black object-cover"
+            class="h-60 sm:h-70 w-full border-b-2 border-black object-cover text-white"
           />
           <p class="text-white text-3xl pt-4 cursor-default">Spider-Man</p>
           <button
@@ -98,7 +98,7 @@
           <img
             src="/assets/marvel/daredevil.webp"
             alt="daredevil"
-            class="h-60 sm:h-70 w-full border-b-2 border-black object-cover"
+            class="h-60 sm:h-70 w-full border-b-2 border-black object-cover text-white"
           />
           <p class="text-white text-3xl pt-4 cursor-default">Daredevil</p>
           <button
@@ -115,7 +115,7 @@
           <img
             src="/assets/marvel/wolverine.jpg"
             alt="wolverine"
-            class="h-60 sm:h-70 w-full border-b-2 border-black object-cover"
+            class="h-60 sm:h-70 w-full border-b-2 border-black object-cover text-white"
           />
           <p class="text-white text-3xl pt-4 cursor-default">Wolverine</p>
           <button
@@ -132,7 +132,7 @@
           <img
             src="/assets/marvel/hulk.jpg"
             alt="hulk"
-            class="h-60 sm:h-70 w-full border-b-2 border-black object-cover"
+            class="h-60 sm:h-70 w-full border-b-2 border-black object-cover text-white"
           />
           <p class="text-white text-3xl pt-4 cursor-default">Hulk</p>
           <button
