--- a/dc/dc.html
+++ b/dc/dc.html
@@ -57,7 +57,7 @@
           <img
             src="/assets/dc/dc.png"
             alt="dc logo"
-            class="max-h-30 sm:max-h-32"
+            class="max-h-30 sm:max-h-32 text-white"
           />
           <hr class="bg-white w-10 h-1 rounded-md my-4" />
           <p class="text-white text-md text-center mb-6 cursor-default sm:text-lg md:text-xl">
@@ -82,7 +82,7 @@
           <img
             src="/assets/dc/superman3.jpg"
             alt="superman"
-            class="h-60 sm:h-70 w-full border-b-2 border-black object-cover"
+            class="h-60 sm:h-70 w-full border-b-2 border-black object-cover text-white"
           />
           <p class="text-white text-3xl pt-4 cursor-default">Superman</p>
           <button
@@ -99,7 +99,7 @@
           <img
             src="/assets/dc/batman3.jpg"
             alt="batman"
-            class="h-60 sm:h-70 w-full border-b-2 border-black object-cover"
+            class="h-60 sm:h-70 w-full border-b-2 border-black object-cover text-white"
           />
           <p class="text-white text-3xl pt-4 cursor-default">Batman</p>
           <button
@@ -115,7 +115,7 @@
           <img
             src="/assets/dc/wonderwoman.jpg"
             alt="wonderwoman"
-            class="h-60 sm:h-70 w-full border-b-2 border-black object-cover"
+            class="h-60 sm:h-70 w-full border-b-2 border-black object-cover text-white"
           />
           <p class="text-white text-3xl pt-4 cursor-default">Wonder Woman</p>
           <button
@@ -131,7 +131,7 @@
           <img
             src="/assets/dc/greenlantern.jpg"
             alt="greenlantern"
-            class="h-60 sm:h-70 w-full border-b-2 border-black object-cover"
+            class="h-60 sm:h-70 w-full border-b-2 border-black object-cover text-white"
           />
           <p class="text-white text-3xl pt-4 cursor-default">Green Lantern</p>
           <button
