--- a/marvel/spiderman.html
+++ b/marvel/spiderman.html
@@ -54,7 +54,7 @@
         <div class="block sm:flex">
           <div class="flex justify-center items-center">
             <img
-              class="w-[220px] h-[320px] sm:w-[280px] sm:h-[400px] border-2 border-black rounded-4xl"
+              class="w-[220px] h-[320px] sm:w-[280px] sm:h-[400px] border-2 border-black rounded-4xl text-white"
               src="/assets/marvel/spiderman2.webp"
               alt="spiderman"
             />
