--- a/marvel/marvel.html
+++ b/marvel/marvel.html
@@ -50,7 +50,7 @@
     </navbar>
 
     <main>
-      <div class="bg-[url(/assets/marvel/marvel-wp.jpg)] w-full bg-cover">
+      <div class="bg-[url(../assets/marvel/marvel-wp.jpg)] w-full bg-cover">
         <div
           class="inset-0 bg-black/80 w-full flex flex-col justify-center items-center py-10"
         >
