--- a/dc/dc.html
+++ b/dc/dc.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hero★Verse | DC</title>
-    <link rel="shortcut icon" href="assets/icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/icon.png" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="../style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -21,7 +21,7 @@
       <h2 class="text-white text-5xl flex cursor-default">
         Hero<span class="items-center flex px-0.5"
           ><img
-            src="/assets/star.png"
+            src="../assets/star.png"
             alt="star-icon"
             width="20px"
             height="20px"
@@ -49,13 +49,13 @@
       </ul>
     </navbar>
 
-    <main>
-      <div class="bg-[url(/assets/dc/dc-wp.jpg)] bg-cover w-full sm:bg-center">
+    <main class="w-full min-h-full">
+      <div class="bg-[url(../assets/dc/dc-wp.jpg)] bg-cover w-full sm:bg-center">
         <div
           class="inset-0 bg-black/80 w-full flex flex-col justify-center items-center py-10"
         >
           <img
-            src="/assets/dc/dc.png"
+            src="../assets/dc/dc.png"
             alt="dc logo"
             class="max-h-30 sm:max-h-32 text-white"
           />
@@ -71,7 +71,7 @@
       </div>
     </main>
 
-    <section>
+    <section class="w-full min-h-full">
       <div
         class="min-h-50 mt-20 grid grid-cols-1 pb-20 sm:grid-cols-2 gap-8 md:grid-cols-4"
       >
@@ -80,7 +80,7 @@
           class="w-50 max-w-sm bg-blue-900 border-2 border-black rounded-3xl shadow-2xl flex flex-col justify-center items-center overflow-hidden mx-auto"
         >
           <img
-            src="/assets/dc/superman3.jpg"
+            src="../assets/dc/superman3.jpg"
             alt="superman"
             class="h-60 sm:h-70 w-full border-b-2 border-black object-cover text-white"
           />
@@ -97,7 +97,7 @@
           class="w-50 max-w-sm bg-blue-900 border-2 border-black rounded-3xl shadow-2xl flex flex-col justify-center items-center overflow-hidden mx-auto"
         >
           <img
-            src="/assets/dc/batman3.jpg"
+            src="../assets/dc/batman3.jpg"
             alt="batman"
             class="h-60 sm:h-70 w-full border-b-2 border-black object-cover text-white"
           />
@@ -113,7 +113,7 @@
           class="w-50 max-w-sm bg-blue-900 border-2 border-black rounded-3xl shadow-2xl flex flex-col justify-center items-center overflow-hidden mx-auto"
         >
           <img
-            src="/assets/dc/wonderwoman.jpg"
+            src="../assets/dc/wonderwoman.jpg"
             alt="wonderwoman"
             class="h-60 sm:h-70 w-full border-b-2 border-black object-cover text-white"
           />
@@ -129,7 +129,7 @@
           class="w-50 max-w-sm bg-blue-900 border-2 border-black rounded-3xl shadow-2xl flex flex-col justify-center items-center overflow-hidden mx-auto"
         >
           <img
-            src="/assets/dc/greenlantern.jpg"
+            src="../assets/dc/greenlantern.jpg"
             alt="greenlantern"
             class="h-60 sm:h-70 w-full border-b-2 border-black object-cover text-white"
           />
