--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </navbar>
 
     <main
-      class="bg-black w-full flex-col flex items-center justify-center gap-y-5"
+      class="bg-black w-full min-h-full flex-col flex items-center justify-center gap-y-5"
     >
       <h3 class="text-white text-3xl pt-20 cursor-default">Welcome to</h3>
       <span class="bg-white h-1 w-7 rounded-3xl"></span>
@@ -93,7 +93,7 @@
       </div>
     </main>
 
-    <section class="flex flex-col justify-center items-center w-full">
+    <section class="flex flex-col justify-center items-center w-full min-h-full">
       <h2 class="text-black text-6xl flex pt-20 cursor-default">
         Hero<span class="items-center flex px-0.5"
           ><img
