--- a/marvel/daredevil.html
+++ b/marvel/daredevil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hero★Verse | Daredevil</title>
-    <link rel="shortcut icon" href="assets/icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/icon.png" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="../style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -21,7 +21,7 @@
       <h2 class="text-white text-5xl flex cursor-default">
         Hero<span class="items-center flex px-0.5"
           ><img
-            src="/assets/star.png"
+            src="../assets/star.png"
             alt="star-icon"
             width="20px"
             height="20px"
@@ -49,13 +49,13 @@
       </ul>
     </navbar>
 
-    <main>
+    <main class="w-full min-h-full">
       <div class="flex flex-row bg-red-800 justify-center py-20">
         <div class="block sm:flex">
           <div class="flex justify-center items-center">
             <img
               class="w-[220px] h-[320px] sm:w-[280px] sm:h-[400px] border-2 border-black rounded-4xl text-white"
-              src="/assets/marvel/daredevil2.jpg"
+              src="../assets/marvel/daredevil2.jpg"
               alt="daredevil"
             />
           </div>
