--- a/marvel/marvel.html
+++ b/marvel/marvel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hero★Verse | Marvel</title>
-    <link rel="shortcut icon" href="assets/icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/icon.png" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="../style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -49,7 +49,7 @@
       </ul>
     </navbar>
 
-    <main>
+    <main class="w-full min-h-full">
       <div class="bg-[url(../assets/marvel/marvel-wp.jpg)] w-full bg-cover">
         <div
           class="inset-0 bg-black/80 w-full flex flex-col justify-center items-center py-10"
@@ -79,7 +79,7 @@
           class="w-50 max-w-sm bg-red-800 border-2 border-black rounded-3xl shadow-2xl flex flex-col justify-center items-center overflow-hidden mx-auto"
         >
           <img
-            src="/assets/marvel/spiderman.png"
+            src="../assets/marvel/spiderman.png"
             alt="spiderman"
             class="h-60 sm:h-70 w-full border-b-2 border-black object-cover text-white"
           />
@@ -96,7 +96,7 @@
           class="w-50 max-w-sm bg-red-800 border-2 border-black rounded-3xl shadow-2xl flex flex-col justify-center items-center overflow-hidden mx-auto"
         >
           <img
-            src="/assets/marvel/daredevil.webp"
+            src="../assets/marvel/daredevil.webp"
             alt="daredevil"
             class="h-60 sm:h-70 w-full border-b-2 border-black object-cover text-white"
           />
@@ -113,7 +113,7 @@
           class="w-50 max-w-sm bg-red-800 border-2 border-black rounded-3xl shadow-2xl flex flex-col justify-center items-center overflow-hidden mx-auto"
         >
           <img
-            src="/assets/marvel/wolverine.jpg"
+            src="../assets/marvel/wolverine.jpg"
             alt="wolverine"
             class="h-60 sm:h-70 w-full border-b-2 border-black object-cover text-white"
           />
@@ -130,7 +130,7 @@
           class="w-50 max-w-sm bg-red-800 border-2 border-black rounded-3xl shadow-2xl flex flex-col justify-center items-center overflow-hidden mx-auto"
         >
           <img
-            src="/assets/marvel/hulk.jpg"
+            src="../assets/marvel/hulk.jpg"
             alt="hulk"
             class="h-60 sm:h-70 w-full border-b-2 border-black object-cover text-white"
           />
