--- a/dc/superman.html
+++ b/dc/superman.html
@@ -44,7 +44,7 @@
         <li class="hover:text-red-600">
           <a href="../marvel/marvel.html">Marvel</a>
         </li>
-        <li class="hover:text-blue-600"><a href="dc.html">DC</a></li>
+        <li class="hover:text-blue-600 text-blue-600"><a href="dc.html">DC</a></li>
         <li><a href="../heroes.html">All Heroes</a></li>
       </ul>
     </navbar>
