--- a/marvel/daredevil.html
+++ b/marvel/daredevil.html
@@ -41,7 +41,7 @@
         class="nav-list hidden flex-col absolute top-20 left-0 w-full bg-violet-950 text-white text-2xl p-6 pl-10 gap-4 z-40 sm:top-24 sm:pl-10 md:flex md:flex-row md:gap-6 md:items-center md:bg-transparent md:p-0 md:text-2xl md:static md:w-auto md:ml-auto"
       >
         <li><a href="../index.html">Home</a></li>
-        <li class="hover:text-red-600">
+        <li class="hover:text-red-600 text-red-600">
           <a href="marvel.html">Marvel</a>
         </li>
         <li class="hover:text-blue-600"><a href="../dc/dc.html">DC</a></li>
